netcfg (0.11) unstable; urgency=low

  * use new dpkg features so build is less cludgy 

 -- David Whedon <dwhedon@debian.org>  Mon,  7 May 2001 23:31:11 -0700

netcfg (0.10) unstable; urgency=low

  * fix broken handling of nameservers, build with cdebconf-dev. 

 -- David Whedon <dwhedon@debian.org>  Wed, 14 Feb 2001 20:33:40 -0800

netcfg (0.09) unstable; urgency=low

  * make necessary dirs at build time rather than runtime
  * call it dhclient rather than dhclient-2.2.x

 -- David Whedon <dwhedon@debian.org>  Tue,  6 Feb 2001 21:41:50 -0800

netcfg (0.08) unstable; urgency=low

  * route is now in /sbin 

 -- David Whedon <dwhedon@debian.org>  Wed, 31 Jan 2001 09:58:18 -0800

netcfg (0.07) unstable; urgency=low

  * if a gateway is specified, netcfg-static needs to add a default route 

 -- David Whedon <dwhedon@debian.org>  Tue, 30 Jan 2001 23:30:18 -0800

netcfg (0.06) unstable; urgency=low

  * added German translations from Michael Bramer <grisu@debian.org> (Closes: #83153, #83159)
  * automatically choose between dhcp-client or pump

 -- David Whedon <dwhedon@debian.org>  Tue, 23 Jan 2001 20:20:00 -0800

netcfg (0.05) unstable; urgency=low

  * added support for dhclient and pump.
  * removed support for dhcpcd. 
  * split things up more cleanly b/w dhcp and static.

 -- David Whedon <dwhedon@debian.org>  Sun, 21 Jan 2001 22:07:15 -0800

netcfg (0.04) unstable; urgency=low

  * fixed a segfault found by "Randolph Chung" <randolph@tausq.org>  

 -- David Whedon <dwhedon@gordian.com>  Mon,  8 Jan 2001 19:19:17 -0800

netcfg (0.03) unstable; urgency=low

  * cleaned up much, now it plays well with main-menu and
    actually configures the network.

 -- David Whedon <dwhedon@gordian.com>  Sat, 30 Dec 2000 23:01:09 -0800

netcfg (0.02) unstable; urgency=low

  * dhcp and static config now in two separate udebs 

 -- David Whedon <dwhedon@gordian.com>  Tue, 26 Dec 2000 20:53:58 -0800

netcfg (0.01) unstable; urgency=low

  * Initial Release.
